docs(readme): rewrite for a reader who has never run a server, and list the rig 1:1
The old README assumed the reader already knew what Folia, NeoForge, a plugin and a
hybrid core were, and described the work in the abstract: it never said which mods,
which plugins, or what "it works" was measured against.

The new one starts from what a server core is, why mods and plugins together are hard,
and what the three existing options each cost. Then the concrete part: the exact 87 mod
jars and 38 plugin jars of the test rig with their ids and versions, the hardware and
flags they run under, today's numbers (Done 12.673s, 115 mods, 37 plugins, 0 non-datagen
binding failures), every compatibility switch with its default, how the harness reads an
answer back out of a running game, and a section that states the open problems - the
Maven library loader, the Rapier abort, the client-side trails - instead of listing only
successes. English first, Russian in full below.

The mark: an E built out of chunk tiles on a grey ground, three shades for three region
threads and one amber tile for the loader inside the grid. docs/assets/mklogo.py
regenerates both the SVG and the PNG with no dependencies.